--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 <head>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <script src="js/jquery-3.0.0.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
     <script src="js/scripts.js"></script>
-    <title>Pig Dice Game</title>
+
+    <title>PIG-DICE-GAME</title>
 </head>
 
 <body>
