additional styles in mystyles

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <input required class="secondplayerName form-control" type="text">
                 </div>
             </form>
-            <button id="start" class="btn-info btn">KickOff</button>
+            <button id="start" class="btn-info btn">Begin</button>
         </div>
     </div>
 
